# OpenCV-test-crap

./: .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  DONE.txt  Doxyfile  MainPage.md  Makefile  README.md  TODO.txt  canny  cmake_install.cmake  my_makefile  transpTest  utils.h
Data/Bahnhof/: Motion.txt  TRUTH.txt  correspondence_file_list.txt  filelist.txt  first_frame_centered.JPG->2.JPG_pts  first_frame_centered.JPG->3.JPG_pts  first_frame_centered.JPG->4.JPG_pts  first_frame_centered.JPG->5.JPG_pts  first_frame_centered.JPG->ref_corrected.JPG_pts  imgpts_2->first_frame_centered.txt  imgpts_3->first_frame_centered.txt  imgpts_4->first_frame_centered.txt  imgpts_5->first_frame_centered.txt  imgpts_first_frame+ref_centered.txt  imgpts_ref_corrected->first_frame.txt  imgpts_ref_corrected->first_frame_centered.txt  path_0.txt  path_2.txt  path_3.txt  path_5.txt  path_ff.txt
Data/Gut Rosenkrantz/: 0_first_0.txt  0_first_first.txt  1_first_1.txt  1_first_first.txt  2_first_2.txt  2_first_first.txt  3_first_3.txt  3_first_first.txt  4_first_4.txt  4_first_first.txt  5_first_5.txt  5_first_first.txt  8_first_8.txt  8_first_first.txt  9_first_9.txt  9_first_first.txt  Motion.txt  TRUTH.txt  correspondence_file_list.txt  filelist.txt  first_frame_centered.JPG->0_ref.JPG_pts  first_frame_centered.JPG->1.JPG_pts  first_frame_centered.JPG->2.JPG_pts  first_frame_centered.JPG->3.JPG_pts  first_frame_centered.JPG->4.JPG_pts  first_frame_centered.JPG->5.JPG_pts  first_frame_centered.JPG->9.JPG_pts  first_frame_centered.txt  imgpts_0->first_frame_centered.txt  imgpts_1->first_frame_centered.txt  imgpts_2->first_frame_centered.txt  imgpts_3->first_frame_centered.txt  imgpts_4->first_frame_centered.txt  imgpts_5->first_frame_centered.txt  imgpts_8->first_frame_centered.txt  imgpts_9->first_frame_centered.txt
Data/Series/Set10/: path1.xml  path2.xml  path3.xml  path4.xml  path5.xml
calibration/: CalibrationFileReader.cpp  CalibrationFileReader.h  correctImage.cpp  ipad_camera_params.xml
canny/: canny.cpp
edgesToPng/: prev.cpp  transpTest.cpp
label_imgs/: .DualImageWindow.cpp.swp  .DualImageWindow.hpp.swp  .main.cpp.swp  DualImageWindow.cpp  DualImageWindow.hpp  main.cpp  serialization.hpp  serialization.tpp
label_imgs/ann_katrin/: .manual_reg_app.cpp.swp  .manual_registration.cpp.swp  .manual_registration.h.swp  .slider.cpp.swp  .slider.h.swp  .slider_app.cpp.swp  manual_reg_app.cpp  manual_registration.cpp  manual_registration.h  slider.cpp  slider.h  slider_app.cpp
solvePnP/: ImageSeries.cpp  ImageSeries.hpp  estimation.cpp  estimation.hpp  solvePnP.cpp
stereo/: .stereo.cpp.swp  AUTO_pts.h  castle_data.cpp  evaluation.cpp  manually_labeled.cpp  scale_degeneration_test.cpp  stereo.cpp  stereo_v2.cpp  stereo_v3.cpp  stereo_v3.hpp  stereo_v3_main.cpp  test.cpp
stereo/Indoor samples/: Untitled-1.psd
triangulate/: .triangulate.cpp.swp  Common.h  Triangulation.cpp  Triangulation.h  triangulate.cpp
